[gd_scene load_steps=30 format=2]

[ext_resource path="res://Sprites/RogueLike/frames/knight_m_idle_anim_f0.png" type="Texture" id=1]
[ext_resource path="res://Sprites/RogueLike/frames/knight_m_idle_anim_f1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/RogueLike/frames/knight_m_idle_anim_f2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/RogueLike/frames/knight_m_idle_anim_f3.png" type="Texture" id=4]
[ext_resource path="res://Characters/Knight.gd" type="Script" id=5]
[ext_resource path="res://Sprites/RogueLike/frames/knight_m_run_anim_f0.png" type="Texture" id=6]
[ext_resource path="res://Sprites/RogueLike/frames/knight_m_run_anim_f1.png" type="Texture" id=7]
[ext_resource path="res://Sprites/RogueLike/frames/knight_m_run_anim_f2.png" type="Texture" id=8]
[ext_resource path="res://Sprites/RogueLike/frames/knight_m_run_anim_f3.png" type="Texture" id=9]
[ext_resource path="res://Sprites/RogueLike/frames/ui_heart_full.png" type="Texture" id=10]
[ext_resource path="res://Sprites/RogueLike/frames/ui_heart_half.png" type="Texture" id=11]
[ext_resource path="res://Sprites/RogueLike/frames/ui_heart_empty.png" type="Texture" id=12]
[ext_resource path="res://Sprites/RogueLike/frames/weapon_regular_sword.png" type="Texture" id=13]
[ext_resource path="res://Sprites/RogueLike/frames/flask_red.png" type="Texture" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 9 )

[sub_resource type="Animation" id=3]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Idle" ]
}

[sub_resource type="Animation" id=4]
resource_name = "Run"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Run" ]
}

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Run"

[sub_resource type="AnimationNodeStateMachineTransition" id=7]

[sub_resource type="AnimationNodeStateMachineTransition" id=8]

[sub_resource type="AnimationNodeStateMachine" id=9]
states/Idle/node = SubResource( 5 )
states/Idle/position = Vector2( 667, 75 )
states/Run/node = SubResource( 6 )
states/Run/position = Vector2( 952.333, 168.333 )
transitions = [ "Idle", "Run", SubResource( 7 ), "Run", "Idle", SubResource( 8 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=10]

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "heart",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 11.5, 5 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 5, 11.5 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 11.5, 5 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 5, 11.5 )

[node name="Knight" type="KinematicBody2D" groups=["Knight"]]
collision_mask = 3
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1, 5 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.25, 0.25 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 3 )
anims/Run = SubResource( 4 )

[node name="AnimationTreeKnight" type="AnimationTree" parent="."]
tree_root = SubResource( 9 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 10 )

[node name="AnimatedHeart" type="AnimatedSprite" parent="."]
position = Vector2( -114, -62 )
frames = SubResource( 11 )
animation = "heart"

[node name="Poty" type="Sprite" parent="."]
visible = false
position = Vector2( -117, 64 )
texture = ExtResource( 14 )

[node name="Attack_right" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_right"]
position = Vector2( 19.5, 6 )
shape = SubResource( 12 )

[node name="Sprite" type="Sprite" parent="Attack_right"]
visible = false
position = Vector2( 19, 6 )
rotation = 1.5708
texture = ExtResource( 13 )

[node name="Attack_down" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_down"]
position = Vector2( 0, 26.5 )
shape = SubResource( 13 )

[node name="Sprite" type="Sprite" parent="Attack_down"]
visible = false
position = Vector2( 0, 26 )
rotation = 3.14159
texture = ExtResource( 13 )

[node name="Attack_left" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_left"]
position = Vector2( -17.5, 6 )
shape = SubResource( 14 )

[node name="Sprite" type="Sprite" parent="Attack_left"]
visible = false
position = Vector2( -17, 6 )
rotation = -1.5708
texture = ExtResource( 13 )

[node name="Attack_up" type="Area2D" parent="."]
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack_up"]
position = Vector2( 1, -16.5 )
shape = SubResource( 15 )

[node name="Sprite" type="Sprite" parent="Attack_up"]
visible = false
position = Vector2( 1, -16 )
texture = ExtResource( 13 )

[connection signal="body_entered" from="Attack_right" to="." method="_on_Attack_right_body_entered"]
[connection signal="body_entered" from="Attack_down" to="." method="_on_Attack_down_body_entered"]
[connection signal="body_entered" from="Attack_left" to="." method="_on_Attack_left_body_entered"]
[connection signal="body_entered" from="Attack_up" to="." method="_on_Attack_up_body_entered"]
